--- a/angular-ecommerce/angular-ecommerce/src/app/components/product-list/product-list-table.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/product-list/product-list-table.component.html
@@ -1,6 +1,7 @@
 <table class="table">
     <thead>
         <tr>
+            <th></th>
             <th>Name</th>
             <th>Price</th>
             <th>Units in stock</th>
@@ -8,9 +9,12 @@
     </thead>
     <tbody>
         <tr *ngFor="let tempProduct of products">
-            <th> {{ tempProduct.name }} </th>
-            <th> {{ tempProduct.unitPrice }} </th>
-            <th> {{ tempProduct.unitsInStock }} </th>
+            <td class="align-middle"> 
+                <img src=" {{ tempProduct.imageUrl }}" height="50" />    
+            </td>
+            <td class="align-middle"> {{ tempProduct.name }} </td>
+            <td class="align-middle"> {{ tempProduct.unitPrice }} </td>
+            <td class="align-middle"> {{ tempProduct.unitsInStock }} </td>
         </tr>
     </tbody>
 </table>
