--- a/angular-ecommerce/angular-ecommerce/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/product-category-menu/product-category-menu.component.html
@@ -1,1 +1,13 @@
-<p>product-category-menu works!</p>
+<div class="menu-sidebar-content js-scrollbar1">
+    <nav class="navbar-sidebar">
+      <ul class="list-unstyled navbar-list">
+        <div *ngFor="let tempProductCategory of productCategories">
+            <li>
+                <a routerLink="/category/{{ tempProductCategory.id }}" 
+                    routerLinkActive="active-link">{{ tempProductCategory.categoryName }}
+                </a>
+            </li>
+        </div>
+      </ul>
+    </nav>
+  </div>
