--- a/angular-ecommerce/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -39,6 +39,8 @@
                                 <ngb-pagination [(page)]="thePageNumber"
                                                 [pageSize]="thePageSize"
                                                 [collectionSize]="theTotalElements"
+                                                [maxSize]="5"
+                                                [boundaryLinks]="true"
                                                 (pageChange)="listProducts()">
                                     
                                 </ngb-pagination>
