--- a/angular-ecommerce/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -17,13 +17,18 @@
                             <p> {{ tempCartItem.unitPrice | currency:'USD' }} </p>
                         </td>
                 
-                        <td>
+                        <td>                
                             <div class="items">
-                                <label>Price:</label> {{ tempCartItem.unitPrice | currency:'USD' }}
-                            </div>
-                
-                            <div class="items">
-                                <label>Quantity:</label> {{ tempCartItem.quantity }}
+                                <label>Quantity:</label>
+
+                                <div class="row no-gutters">
+                                    <div class="col">
+                                        <button class="btn btn-primary btn-sm">
+                                            
+                                        </button>
+                                    </div>
+                                </div>
+
                             </div>
                 
                             <p class="mt-2">Subtotal: {{ tempCartItem.quantity * tempCartItem.unitPrice | currency:'USD' }} </p>
