--- a/angular-ecommerce/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -24,9 +24,22 @@
                                 <div class="row no-gutters">
                                     <div class="col">
                                         <button class="btn btn-primary btn-sm">
-                                            
+                                            <i class="fas fa-plus"></i>
                                         </button>
                                     </div>
+
+                                    <div class="col ml-4 mr-2">
+                                        {{ tempCartItem.quantity }}
+                                    </div>
+
+                                    <div class="col">
+                                        <button class="btn btn-primary btn-sm">
+                                            <i class="fas fa-minus"></i>
+                                        </button>
+                                    </div>
+
+                                    <div class="col-8"></div>
+
                                 </div>
 
                             </div>
