--- a/angular-ecommerce/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -23,7 +23,7 @@
 
                                 <div class="row no-gutters">
                                     <div class="col">
-                                        <button class="btn btn-primary btn-sm">
+                                        <button (click)="incrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
                                             <i class="fas fa-plus"></i>
                                         </button>
                                     </div>
@@ -33,7 +33,7 @@
                                     </div>
 
                                     <div class="col">
-                                        <button class="btn btn-primary btn-sm">
+                                        <button (click)="decrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
                                             <i class="fas fa-minus"></i>
                                         </button>
                                     </div>
@@ -44,6 +44,9 @@
 
                             </div>
                 
+                            <div>
+                                <button (click)="remove(tempCartItem)" class="btn btn-primary btn-sm">Remove</button>
+                            </div>
                             <p class="mt-2">Subtotal: {{ tempCartItem.quantity * tempCartItem.unitPrice | currency:'USD' }} </p>
                         </td>
                 
