--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -213,8 +213,17 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
 
+                <!-- order details -->
+                <div class="form-area">
+                    <h3>Review Your Order</h3>
+                    <p>Total Quantity: {{ totalQuantity }}</p>
+                    <p>Shipping: FREE</p>
+                    <p>Total Price: {{ totalPrice | currency:'USD' }} </p>
+
+                </div>
                 
                 <!-- submit button -->
                 <div class="text-center">
