--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -197,7 +197,9 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let month of creditCardMonths">
+                                        {{ month }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -208,7 +210,9 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <select formControlName="expirationYear">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let year of creditCardYears" (change)="handleMonthsAndYears()">
+                                        {{ year }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
