--- a/angular-ecommerce/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -12,7 +12,7 @@
         <h4>Description</h4>
         <p>{{ product.description }}</p>
 
-        <a routerLink="/products" class="mt-5">Back to Product List</a>
+        <a routerLink="/category/{{categoryId}}" class="mt-5">Back to Product List</a>
 
     </div>
 </div>
