--- a/angular-ecommerce/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -8,10 +8,8 @@
                 <div *ngFor="let tempProduct of products" class="col-md-3">
                 
                     <div class="product-box">
-                        <a routerLink="/products/{{ tempProduct.id  }}">
+                        <a routerLink="/products/{{ tempProduct.id  }}/{{ currentCategoryId }}">
                             <img src=" {{ tempProduct.imageUrl }} " class="img-responsive" />
-                        </a>
-                        <a routerLink="/products/{{ tempProduct.id  }}">
                             <h1> {{ tempProduct.name }} </h1>
                         </a>
                         <div class="price"> {{ tempProduct.unitPrice | currency: 'USD' }} </div>
