--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -71,7 +71,9 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let state of shippingAddressStates" [ngValue]="state">
+                                        {{ state.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
