--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -105,7 +105,7 @@
                         <div class="col-md-2"> <label>Country</label> </div>
                         <div class="col-md-9"> 
                             <div class="input-space">
-                                <select formControlName="country">
+                                <select formControlName="country" (change)="getStates('billingAddress')">
                                     <option *ngFor="let country of countries" [ngValue]="country"> {{ country.name }} </option>
                                 </select>
                             </div>
@@ -135,7 +135,9 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let state of billingAddressStates" [ngValue]="state">
+                                        {{ state.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
