--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -28,6 +28,14 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
+                                <div *nfIf="lastName.invalid && lastName.dirty || lastName.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="lastName.errors['required']">
+                                        Last name is required!
+                                    </div>
+                                    <div *ngIf="lastName.errors['minlength']">
+                                        Last name must be at least 2 characters long!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -37,6 +45,14 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="email" type="text">
+                                <div *nfIf="email.invalid && email.dirty || email.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="email.errors['required']">
+                                        Email is required!
+                                    </div>
+                                    <div *ngIf="email.errors['pattern']">
+                                        Email must be a valid email address format!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
