--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -11,8 +11,8 @@
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
 
-                                <div *nfIf="firstName.invalid && firstName.dirty || firstName.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="firstName.errors['required']">
+                                <div *ngIf="firstName.invalid && firstName.dirty || firstName.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="firstName.errors['required'] || firstName.errors['notOnlyWhitespace']">
                                         First name is required!
                                     </div>
                                     <div *ngIf="firstName.errors['minlength']">
@@ -28,8 +28,8 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
-                                <div *nfIf="lastName.invalid && lastName.dirty || lastName.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="lastName.errors['required']">
+                                <div *ngIf="lastName.invalid && lastName.dirty || lastName.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="lastName.errors['required'] || lastName.errors['notOnlyWhitespace']">
                                         Last name is required!
                                     </div>
                                     <div *ngIf="lastName.errors['minlength']">
@@ -45,7 +45,7 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="email" type="text">
-                                <div *nfIf="email.invalid && email.dirty || email.touched" class="alert alert-danger mt-1">
+                                <div *ngIf="email.invalid && email.dirty || email.touched" class="alert alert-danger mt-1">
                                     <div *ngIf="email.errors['required']">
                                         Email is required!
                                     </div>
