--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -69,6 +69,13 @@
                                 <select formControlName="country" (change)="getStates('shippingAddress')">
                                     <option *ngFor="let country of countries" [ngValue]="country"> {{ country.name }} </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressCountry.invalid && shippingAddressCountry.dirty || shippingAddressCountry.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressCountry.errors['required']">
+                                        Country is required!
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -78,6 +85,12 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+
+                                <div *ngIf="shippingAddressStreet.invalid && shippingAddressStreet.dirty || shippingAddressStreet.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressStreet.errors['required'] || shippingAddressStreet.errors['notOnlyWhitespace']">
+                                        Street is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -87,6 +100,11 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="city" type="text">
+                                <div *ngIf="shippingAddressCity.invalid && shippingAddressCity.dirty || shippingAddressCity.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressCity.errors['required'] || shippingAddressCity.errors['notOnlyWhitespace']">
+                                        City is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -100,6 +118,11 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+                                <div *ngIf="shippingAddressState.invalid && shippingAddressState.dirty || shippingAddressState.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressState.errors['required']">
+                                        State is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -109,6 +132,11 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+                                <div *ngIf="shippingAddressZipCode.invalid && shippingAddressZipCode.dirty || shippingAddressZipCode.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressZipCode.errors['required'] || shippingAddressZipCode.errors['notOnlyWhitespace']">
+                                        Zip code is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
