--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -161,6 +161,11 @@
                                 <select formControlName="country" (change)="getStates('billingAddress')">
                                     <option *ngFor="let country of countries" [ngValue]="country"> {{ country.name }} </option>
                                 </select>
+                                <div *ngIf="billingAddressCountry.invalid && billingAddressCountry.dirty || billingAddressCountry.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressCountry.errors['required']">
+                                        Country is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -170,6 +175,11 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+                                <div *ngIf="billingAddressStreet.invalid && billingAddressStreet.dirty || billingAddressStreet.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressStreet.errors['required'] || billingAddressStreet.errors['notOnlyWhitespace']">
+                                        Street is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -179,6 +189,11 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="city" type="text">
+                                <div *ngIf="billingAddressCity.invalid && billingAddressCity.dirty || billingAddressCity.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressCity.errors['required'] || billingAddressCity.errors['notOnlyWhitespace']">
+                                        City is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -191,6 +206,11 @@
                                     <option *ngFor="let state of billingAddressStates" [ngValue]="state">
                                         {{ state.name }}
                                     </option>
+                                    <div *ngIf="billingAddressState.invalid && billingAddressState.dirty || billingAddressState.touched" class="alert alert-danger mt-1">
+                                        <div *ngIf="billingAddressState.errors['required']">
+                                            State is required!
+                                        </div>
+                                    </div>
                                 </select>
                             </div>
                         </div>
@@ -201,6 +221,11 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+                                <div *ngIf="billingAddressZipCode.invalid && billingAddressZipCode.dirty || billingAddressZipCode.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressZipCode.errors['required'] || billingAddressZipCode.errors['notOnlyWhitespace']">
+                                        Zip code is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
