--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -90,6 +90,9 @@
                                     <div *ngIf="shippingAddressStreet.errors['required'] || shippingAddressStreet.errors['notOnlyWhitespace']">
                                         Street is required!
                                     </div>
+                                    <div *ngIf="shippingAddressStreet.errors['minlength']">
+                                        Street must be at least 2 characters long!
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -103,6 +106,9 @@
                                 <div *ngIf="shippingAddressCity.invalid && shippingAddressCity.dirty || shippingAddressCity.touched" class="alert alert-danger mt-1">
                                     <div *ngIf="shippingAddressCity.errors['required'] || shippingAddressCity.errors['notOnlyWhitespace']">
                                         City is required!
+                                    </div>
+                                    <div *ngIf="shippingAddressCity.errors['minlength']">
+                                        City must be at least 2 characters long!
                                     </div>
                                 </div>
                             </div>
@@ -135,6 +141,10 @@
                                 <div *ngIf="shippingAddressZipCode.invalid && shippingAddressZipCode.dirty || shippingAddressZipCode.touched" class="alert alert-danger mt-1">
                                     <div *ngIf="shippingAddressZipCode.errors['required'] || shippingAddressZipCode.errors['notOnlyWhitespace']">
                                         Zip code is required!
+                                    </div>
+
+                                    <div *ngIf="shippingAddressZipCode.errors['minlength']">
+                                        Zip code must be at least 2 characters long!
                                     </div>
                                 </div>
                             </div>
@@ -179,6 +189,9 @@
                                     <div *ngIf="billingAddressStreet.errors['required'] || billingAddressStreet.errors['notOnlyWhitespace']">
                                         Street is required!
                                     </div>
+                                    <div *ngIf="billingAddressStreet.errors['minlength']">
+                                        Street must be at least 2 characters long!
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -192,6 +205,9 @@
                                 <div *ngIf="billingAddressCity.invalid && billingAddressCity.dirty || billingAddressCity.touched" class="alert alert-danger mt-1">
                                     <div *ngIf="billingAddressCity.errors['required'] || billingAddressCity.errors['notOnlyWhitespace']">
                                         City is required!
+                                    </div>
+                                    <div *ngIf="billingAddressCity.errors['minlength']">
+                                        City must be at least 2 characters long!
                                     </div>
                                 </div>
                             </div>
@@ -224,6 +240,10 @@
                                 <div *ngIf="billingAddressZipCode.invalid && billingAddressZipCode.dirty || billingAddressZipCode.touched" class="alert alert-danger mt-1">
                                     <div *ngIf="billingAddressZipCode.errors['required'] || billingAddressZipCode.errors['notOnlyWhitespace']">
                                         Zip code is required!
+                                    </div>
+
+                                    <div *ngIf="billingAddressZipCode.errors['minlength']">
+                                        Zip code must be at least 2 characters long!
                                     </div>
                                 </div>
                             </div>
