--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -263,6 +263,11 @@
                                     <option>Visa</option>
                                     <option>Mastercard</option>
                                 </select>
+                                <div *ngIf="creditCardType.invalid && creditCardType.dirty || creditCardType.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardType.errors['required']">
+                                        Type is required!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -272,6 +277,14 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text">
+                                <div *ngIf="creditCardNameOnCard.invalid && creditCardNameOnCard.dirty || creditCardNameOnCard.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardNameOnCard.errors['required']">
+                                        Name is required!
+                                    </div>
+                                    <div *ngIf="creditCardNameOnCard.errors['minlength']">
+                                        Name must be at least 2 characters long!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -281,6 +294,14 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text">
+                                <div *ngIf="creditCardNumber.invalid && creditCardNumber.dirty || creditCardNumber.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardNumber.errors['required']">
+                                        Number is required!
+                                    </div>
+                                    <div *ngIf="creditCardNameOnCard.errors['pattern']">
+                                        Number must be 16 digits long!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -290,6 +311,14 @@
                         <div class="col-md-9"> 
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
+                                <div *ngIf="creditCardSecurityCode.invalid && creditCardSecurityCode.dirty || creditCardSecurityCode.touched" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardSecurityCode.errors['required']">
+                                        Security code is required!
+                                    </div>
+                                    <div *ngIf="creditCardNameOnCard.errors['pattern']">
+                                        Security code must be 3 digits long!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
