--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -12,10 +12,10 @@
                                 <input formControlName="firstName" type="text">
 
                                 <div *ngIf="firstName.invalid && firstName.dirty || firstName.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="firstName.errors['required'] || firstName.errors['notOnlyWhitespace']">
+                                    <div *ngIf="firstName.errors?.required || firstName.errors?.notOnlyWhitespace">
                                         First name is required!
                                     </div>
-                                    <div *ngIf="firstName.errors['minlength']">
+                                    <div *ngIf="firstName.errors?.minlength">
                                         First name must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -29,10 +29,10 @@
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
                                 <div *ngIf="lastName.invalid && lastName.dirty || lastName.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="lastName.errors['required'] || lastName.errors['notOnlyWhitespace']">
+                                    <div *ngIf="lastName.errors?.required || lastName.errors?.notOnlyWhitespace">
                                         Last name is required!
                                     </div>
-                                    <div *ngIf="lastName.errors['minlength']">
+                                    <div *ngIf="lastName.errors?.minlength">
                                         Last name must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -46,10 +46,10 @@
                             <div class="input-space">
                                 <input formControlName="email" type="text">
                                 <div *ngIf="email.invalid && email.dirty || email.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="email.errors['required']">
+                                    <div *ngIf="email.errors?.required">
                                         Email is required!
                                     </div>
-                                    <div *ngIf="email.errors['pattern']">
+                                    <div *ngIf="email.errors?.pattern">
                                         Email must be a valid email address format!
                                     </div>
                                 </div>
@@ -71,7 +71,7 @@
                                 </select>
 
                                 <div *ngIf="shippingAddressCountry.invalid && shippingAddressCountry.dirty || shippingAddressCountry.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="shippingAddressCountry.errors['required']">
+                                    <div *ngIf="shippingAddressCountry.errors?.required">
                                         Country is required!
                                     </div>
                                 </div>
@@ -87,10 +87,10 @@
                                 <input formControlName="street" type="text">
 
                                 <div *ngIf="shippingAddressStreet.invalid && shippingAddressStreet.dirty || shippingAddressStreet.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="shippingAddressStreet.errors['required'] || shippingAddressStreet.errors['notOnlyWhitespace']">
+                                    <div *ngIf="shippingAddressStreet.errors?.required || shippingAddressStreet.errors?.notOnlyWhitespace">
                                         Street is required!
                                     </div>
-                                    <div *ngIf="shippingAddressStreet.errors['minlength']">
+                                    <div *ngIf="shippingAddressStreet.errors?.minlength">
                                         Street must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -104,10 +104,10 @@
                             <div class="input-space">
                                 <input formControlName="city" type="text">
                                 <div *ngIf="shippingAddressCity.invalid && shippingAddressCity.dirty || shippingAddressCity.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="shippingAddressCity.errors['required'] || shippingAddressCity.errors['notOnlyWhitespace']">
+                                    <div *ngIf="shippingAddressCity.errors?.required || shippingAddressCity.errors?.notOnlyWhitespace">
                                         City is required!
                                     </div>
-                                    <div *ngIf="shippingAddressCity.errors['minlength']">
+                                    <div *ngIf="shippingAddressCity.errors?.minlength">
                                         City must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -125,7 +125,7 @@
                                     </option>
                                 </select>
                                 <div *ngIf="shippingAddressState.invalid && shippingAddressState.dirty || shippingAddressState.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="shippingAddressState.errors['required']">
+                                    <div *ngIf="shippingAddressState.errors?.required">
                                         State is required!
                                     </div>
                                 </div>
@@ -139,11 +139,11 @@
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
                                 <div *ngIf="shippingAddressZipCode.invalid && shippingAddressZipCode.dirty || shippingAddressZipCode.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="shippingAddressZipCode.errors['required'] || shippingAddressZipCode.errors['notOnlyWhitespace']">
+                                    <div *ngIf="shippingAddressZipCode.errors?.required || shippingAddressZipCode.errors?.notOnlyWhitespace">
                                         Zip code is required!
                                     </div>
 
-                                    <div *ngIf="shippingAddressZipCode.errors['minlength']">
+                                    <div *ngIf="shippingAddressZipCode.errors?.minlength">
                                         Zip code must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -172,7 +172,7 @@
                                     <option *ngFor="let country of countries" [ngValue]="country"> {{ country.name }} </option>
                                 </select>
                                 <div *ngIf="billingAddressCountry.invalid && billingAddressCountry.dirty || billingAddressCountry.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="billingAddressCountry.errors['required']">
+                                    <div *ngIf="billingAddressCountry.errors?.required">
                                         Country is required!
                                     </div>
                                 </div>
@@ -186,10 +186,10 @@
                             <div class="input-space">
                                 <input formControlName="street" type="text">
                                 <div *ngIf="billingAddressStreet.invalid && billingAddressStreet.dirty || billingAddressStreet.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="billingAddressStreet.errors['required'] || billingAddressStreet.errors['notOnlyWhitespace']">
+                                    <div *ngIf="billingAddressStreet.errors?.required || billingAddressStreet.errors?.notOnlyWhitespace">
                                         Street is required!
                                     </div>
-                                    <div *ngIf="billingAddressStreet.errors['minlength']">
+                                    <div *ngIf="billingAddressStreet.errors?.minlength">
                                         Street must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -203,10 +203,10 @@
                             <div class="input-space">
                                 <input formControlName="city" type="text">
                                 <div *ngIf="billingAddressCity.invalid && billingAddressCity.dirty || billingAddressCity.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="billingAddressCity.errors['required'] || billingAddressCity.errors['notOnlyWhitespace']">
+                                    <div *ngIf="billingAddressCity.errors?.required || billingAddressCity.errors?.notOnlyWhitespace">
                                         City is required!
                                     </div>
-                                    <div *ngIf="billingAddressCity.errors['minlength']">
+                                    <div *ngIf="billingAddressCity.errors?.minlength">
                                         City must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -223,7 +223,7 @@
                                         {{ state.name }}
                                     </option>
                                     <div *ngIf="billingAddressState.invalid && billingAddressState.dirty || billingAddressState.touched" class="alert alert-danger mt-1">
-                                        <div *ngIf="billingAddressState.errors['required']">
+                                        <div *ngIf="billingAddressState.errors?.required">
                                             State is required!
                                         </div>
                                     </div>
@@ -238,11 +238,11 @@
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
                                 <div *ngIf="billingAddressZipCode.invalid && billingAddressZipCode.dirty || billingAddressZipCode.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="billingAddressZipCode.errors['required'] || billingAddressZipCode.errors['notOnlyWhitespace']">
+                                    <div *ngIf="billingAddressZipCode.errors?.required || billingAddressZipCode.errors?.notOnlyWhitespace">
                                         Zip code is required!
                                     </div>
 
-                                    <div *ngIf="billingAddressZipCode.errors['minlength']">
+                                    <div *ngIf="billingAddressZipCode.errors?.minlength">
                                         Zip code must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -264,7 +264,7 @@
                                     <option>Mastercard</option>
                                 </select>
                                 <div *ngIf="creditCardType.invalid && creditCardType.dirty || creditCardType.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="creditCardType.errors['required']">
+                                    <div *ngIf="creditCardType.errors?.required">
                                         Type is required!
                                     </div>
                                 </div>
@@ -278,10 +278,10 @@
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text">
                                 <div *ngIf="creditCardNameOnCard.invalid && creditCardNameOnCard.dirty || creditCardNameOnCard.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="creditCardNameOnCard.errors['required']">
+                                    <div *ngIf="creditCardNameOnCard.errors?.required">
                                         Name is required!
                                     </div>
-                                    <div *ngIf="creditCardNameOnCard.errors['minlength']">
+                                    <div *ngIf="creditCardNameOnCard.errors?.minlength">
                                         Name must be at least 2 characters long!
                                     </div>
                                 </div>
@@ -295,10 +295,10 @@
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text">
                                 <div *ngIf="creditCardNumber.invalid && creditCardNumber.dirty || creditCardNumber.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="creditCardNumber.errors['required']">
+                                    <div *ngIf="creditCardNumber.errors?.required">
                                         Number is required!
                                     </div>
-                                    <div *ngIf="creditCardNameOnCard.errors['pattern']">
+                                    <div *ngIf="creditCardNameOnCard.errors?.pattern">
                                         Number must be 16 digits long!
                                     </div>
                                 </div>
@@ -312,10 +312,10 @@
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
                                 <div *ngIf="creditCardSecurityCode.invalid && creditCardSecurityCode.dirty || creditCardSecurityCode.touched" class="alert alert-danger mt-1">
-                                    <div *ngIf="creditCardSecurityCode.errors['required']">
+                                    <div *ngIf="creditCardSecurityCode.errors?.required">
                                         Security code is required!
                                     </div>
-                                    <div *ngIf="creditCardNameOnCard.errors['pattern']">
+                                    <div *ngIf="creditCardNameOnCard.errors?.pattern">
                                         Security code must be 3 digits long!
                                     </div>
                                 </div>
