--- a/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -545,7 +545,7 @@
           <p>Total Price: {{ totalPrice | currency: "USD" }}</p>
         </div>
 
-        <!-- submit button-->
+        <!-- Submit button-->
         <div class="text-center">
           <button type="submit" class="btn btn-info">Purchase</button>
         </div>
